--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Ocean (720P)-->
     <!-- https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment -->
     <div class="player">
-        <video class="video" src='https://www.youtube.com/watch?v=jE8cnIOI2Dc&ab_channel=DrKru' playsinline></video>
+        <video class="video" src='https://redirector.googlevideo.com/videoplayback?expire=1607705512&ei=SE_TX5CSJYPZ1gKu6qbQBA&ip=193.42.108.200&id=o-AMh1yjEDsgi4zPeqel7s44-yEId6CwSOsUApB3o9Rd85&itag=22&source=youtube&requiressl=yes&mh=M3&mm=31%2C29&mn=sn-5hne6nsd%2Csn-5hnekn7l&ms=au%2Crdu&mv=u&mvi=3&pl=25&vprv=1&mime=video%2Fmp4&ns=UcGpgzXWR16hxWUAvPZVzyoF&ratebypass=yes&dur=1237.089&lmt=1607642150716212&mt=1607683481&fvip=3&c=WEB&txp=3516222&n=lzSiuuTP3yMRFt9k&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Cmime%2Cns%2Cratebypass%2Cdur%2Clmt&sig=AOq0QJ8wRQIgPV6hsFEIta1T33Npk5eGCnlaWnicY0eWeaJp6Z23hSYCIQCdLANZ1zqoY5UjZdnPJk8xhLS343v6OuZFXQBtI5CBCg%3D%3D&lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl&lsig=AG3C_xAwRAIgSpNIjt1vQYi6SzBklZbF_44A7At5wdPFXxICkmhSj0ECIDMXJuU0LQlh-ojHCPujrA0p9l0oVNJvE6pperflqvD8&title=%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0_%D0%B2_%D0%A1%D0%A8%D0%90_/_%D0%9A%D0%B0%D0%BA_%D0%B6%D0%B8%D0%B2%D1%83%D1%82_%D0%90%D0%BC%D0%B5%D1%80%D0%B8%D0%BA%D0%B0%D0%BD%D1%86%D1%8B_/_%D0%A1%D0%B2%D0%B8%D1%87_1.57' playsinline></video>
         <div class="show-controls">
             <div class="controls-container">
                 <!-- Progress Bar -->
